--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@svgr/webpack": "^6.5.1",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "babel-loader": "^9.1.0",
@@ -49,9 +50,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.8.1",
-    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.4",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
