--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "jsx": "react-jsx",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["./src", "./src/custom.d.ts"]
+  "include": ["./src", "./src/types"]
 }
