--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@babel/preset-typescript": "^7.18.6",
     "@svgr/webpack": "^6.5.1",
     "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "babel-loader": "^9.1.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.26.0",
@@ -63,8 +65,11 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1"
   }
 }
