--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "^5.47.1",
     "babel-loader": "^9.1.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
@@ -56,6 +57,7 @@
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.1",
     "prettier": "^2.8.1",
+    "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.4",
     "typescript": "^4.9.4",
